# parker

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  REVIEW-PREP-2026-06-03.md
backend/: .env.example  parker.spec  pyinstaller_entry.py  pyproject.toml  requirements-build.txt  requirements-voice.txt  requirements.txt
backend/app/: __init__.py  cli.py  config.py  doctor.py  main.py  onboard.py  paths.py
backend/app/brain/: __init__.py  adapter.py  build.py  claude.py  guard.py  (+1 more)
backend/tests/: conftest.py  test_acceptance_hands.py  test_architecture_docs.py  test_audio_autodata_evaluator.py  test_audio_autodata_promoter.py  test_audio_harness.py  test_benchmark_evaluator.py  test_brain.py  test_brain_lane.py  test_brain_lane_evaluator.py  test_brain_openclaw.py  test_capabilities.py  test_caregiver_state_legibility_evaluator.py  test_ci_workflow.py  test_claim_metric_map_evaluator.py  test_cli.py  test_construct_validity_matrix_evaluator.py  test_degraded_input_replay_evaluator.py  test_demo.py  test_demo_interactivity_predictions.py  test_digest.py  test_dose_verification.py  test_escalation.py  test_escalation_candidates.py  test_evening_loop.py  test_exercises.py  test_family_config.py  test_fragment_repair.py  test_grant_readiness_evaluator.py  test_grant_source_citations_evaluator.py  test_hands.py  test_hands_evaluator.py  test_interactivity_evaluator.py  test_loop_state.py  test_meds_tracker.py  test_memory.py  test_models.py  test_name_prefix.py  test_nbest_repair.py  test_outbox.py  (+29 more)
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
(+752 files in other folders)
